# time_str

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  bumpversion  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: check.yml  github-release.yml  lint.yml  python-package.yml  python-release.yml  test.yml  todo.yml
docs/: api.rst  conf.py  index.rst  installing.rst  quickstart.rst  requirements.txt  version_guarantees.rst
docs/api/: index.rst
docs/extensions/: resourcelinks.py
docs/source/: conf.py  index.rst
requirements/: dev.txt  docs.txt
tests/: main_test.py
time_str/: __init__.py  _version.py  convert.py  converter.py  core.py  interval.py
